resize property doesn't work on iframes https://bugs.webkit.org/show_bug.cgi?id=9221

Patch by Christian Biesinger <cbiesinger@chromium.org> on 2013-01-24
Reviewed by Eric Seidel.

Source/WebCore:

Test: fast/css/resize-corner-tracking-transformed-iframe.html
and fast/css/resize-corner-tracking.html

* rendering/RenderIFrame.cpp:
(WebCore::RenderIFrame::requiresLayer):
(WebCore):
* rendering/RenderIFrame.h:
<iframe>s need a layer to be resizable, so make requiresLayer return
true if the css property is set.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::canResize):
(WebCore):
(WebCore::RenderLayer::resize):
(WebCore::RenderLayer::positionOverflowControls):
(WebCore::RenderLayer::isPointInResizeControl):
(WebCore::RenderLayer::hitTestOverflowControls):
(WebCore::RenderLayer::hitTestLayer):
* rendering/RenderLayer.h:
(RenderLayer):
Add a new canResize() function and use it instead of hasOverflowClip()
to check whether resizing should be allowed (there's still the
additional check of style()->resize() != RESIZE_NONE, of course)

Make hitTestLayer return |this| when the point is inside the
resizer rectangle.

* rendering/RenderWidget.cpp:
(WebCore::RenderWidget::paint):
Call layer()->paintResizer() to actually paint the resizer.

LayoutTests:

* fast/css/resize-corner-tracking-transformed-iframe.html: Added.
New test for testing resize of transformed <iframe>

* fast/css/resize-corner-tracking.html:
Add a testcase for resizing an <iframe>

* platform/chromium-linux/fast/css/resize-corner-tracking-expected.png:
* platform/chromium-linux/fast/css/resize-corner-tracking-transformed-iframe-expected.png: Added.
* platform/chromium-mac/fast/css/resize-corner-tracking-transformed-iframe-expected.png: Added.
* platform/chromium-win/fast/css/resize-corner-tracking-expected.txt:
* platform/chromium/compositing/iframes/resizer-expected.txt:
* platform/chromium/fast/css/resize-corner-tracking-expected.txt:
* platform/chromium/fast/css/resize-corner-tracking-transformed-expected.txt:
* platform/chromium/fast/css/resize-corner-tracking-transformed-iframe-expected.txt: Added.
* platform/mac/fast/css/resize-corner-tracking-expected.txt:
* platform/mac/fast/css/resize-corner-tracking-transformed-iframe-expected.png: Added.
* platform/mac/fast/css/resize-corner-tracking-transformed-iframe-expected.txt: Added.
Update/add generic, mac and linux reference files for the test

* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/TestExpectations:
Add expected failures for the tests until they can be rebaselined.

Canonical link: https://commits.webkit.org/126066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140749 268f45cc-cd09-0410-ab3c-d52691b4dbfc